--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
 <script src="https://fb.me/react-15.1.0.js"></script>
 <script src="https://fb.me/react-dom-15.1.0.js"></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <body>
 <div>
     <div id="app" class="container">
